Se agregan nuevos tipos de ordenamiento en los filtros y se realizan correcciones.

--- a/cliente/html/index.html
+++ b/cliente/html/index.html
@@ -93,9 +93,12 @@
               <div class="w-100-ns">
                 <label class="filter-col dropdown" for="pref-orderby">Ordenar por</label>
                 <select class="orden-select">
-                  <option value="titulo-ASC">Titulo</option>
-                  <option value="anio-DESC">Mas nuevas</option>
+                  <option value="titulo-ASC">Título</option>
+                  <option value="anio-DESC">Más nuevas</option>
+                  <option value="anio-ASC">Más antiguas</option>
                   <option value="puntuacion-DESC">Mejores puntuadas</option>
+                  <option value="duracion-DESC">Mayor duración</option>
+                  <option value="duracion-ASC">Menor duración</option>
                 </select>
               </div>
               <div class="w-100-ns">
